--- a/templates/main/Projects.html
+++ b/templates/main/Projects.html
@@ -8,7 +8,7 @@
     <ul class="project_cards">
         {% for project in projects %}
         <li class="project_card">
-            <a href="/{{ project.title }}/">
+            <a href="/{{ project.id }}/">
                 <img class="project_card_img" src="{{ project.banner_img.url }}">
             </a>
             <div class="project_card_contents">
