--- a/templates/main/Projects.html
+++ b/templates/main/Projects.html
@@ -8,12 +8,11 @@
     <ul class="project_cards">
         {% for project in projects %}
         <li class="project_card">
-            <a href="/{{ project.id }}/">
+            <a href="/project/{{ project.id }}/">
                 <img class="project_card_img" src="{{ project.banner_img.url }}">
             </a>
-            <div class="project_card_contents">
+            <div class="project_card_text">
                 <div class="project_card_contents_title">{{ project.title }}</div>
-                <div class="news__card__contents__description">{{ project.content }}</div>
                 <ul class="tags">
                     {% for tag in project.tags.all %}
                     <li class="tag">{{ tag.tag }}</li>
