--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,113 @@
+
+.main_contents{
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: center;
+}
+
+.base_banner {
+    display: flex;
+    align-items: center; /* 수직 가운데 정렬 */
+  }
+  
+  .base_text {
+    flex: 1; /* 남은 공간을 모두 차지하도록 설정하여 오른쪽 정렬됨 */
+    margin-left: 30px;
+    padding: 30px;
+  }
+  
+  .profile_img {
+    margin-left: auto; /* 왼쪽 여백을 auto로 설정하여 오른쪽 정렬됨 */
+    max-height: 150px;
+    margin-right: 30px;
+  }
+
 textarea {
     width: 100%;
 }
 
 input[type=submit] {
     margin-top:10px;
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+  }
+
+.project_detail_page {
+    display: inline-block;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.project_detail_title {
+    padding: 10;
+    text-align: center;
+}
+.tags {
+    list-style-type: none; /* 리스트 마커 제거 */
+    padding: 5;
+    display: flex;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+
+    .tag {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: green;
+        margin-right: 10px;
+        white-space: nowrap;
+        border-radius: 7px;
+        display: inline-block;
+        padding: 7px;
+        color: white;
+        text-align: center;
+        font-family: Pretendard, sans-serif;
+        font-size: 15px;
+        font-weight: 600;
+        letter-spacing: -0.6px;
+    }
+}
+
+.md_img{
+    max-width: 80%;
+}
+
+
+.projects{
+    text-align: center;
+
+    .projects_title{
+        
+    }
+    .project_cards{
+        list-style-type: none; /* 리스트 마커 제거 */
+        padding: 5;
+        display: flex; /* 가로로 나열하기 위해 플렉스 박스로 설정 */
+        text-align: center;
+        justify-content: center; /* 수평 가운데 정렬 */
+        align-items: center; /* 수직 가운데 정렬 */
+
+        .project_card{
+            background-color: rgb(238, 238, 238);
+            margin-right: 10px;
+            display: inline-block;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            border-radius: 7px;
+            justify-content: center; /* 수평 가운데 정렬 */
+            align-items: center; /* 수직 가운데 정렬 */
+            .project_card_img{
+                width: 300px; /* 원하는 너비 설정 */
+                height: 300px;
+                object-fit: fill;
+                display: flex;
+                justify-content: center; /* 수평 가운데 정렬 */
+                align-items: center; /* 수직 가운데 정렬 */
+                border-radius: 10px;
+                display: inline-block;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                background-color: white;
+            }
+        }
+    }
 }
