--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <title>hanbyel's portfolio</title>
-    <div>
-        Made with Django
-    </div>
     <a class = 'base_banner' style="background-image: url('base_banner.jpg');">
         <div class = "base_text">
             <h3 class = 'base_title'>
@@ -31,5 +28,11 @@
 {% block content %}
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
+
+<div class = 'foot'>
+    <div>
+        Made with Django
+    </div>
+</div>
 </body>
 </html>
