--- a/static/style.css
+++ b/static/style.css
@@ -34,10 +34,10 @@ body, html {
     height: 100%;
     margin: 0;
   }
-
 .project_detail_page {
     display: inline-block;
-    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .project_detail_title {
@@ -50,22 +50,21 @@ body, html {
     display: flex;
     justify-content: center; /* 수평 가운데 정렬 */
     align-items: center; /* 수직 가운데 정렬 */
-
-    .tag {
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        background-color: green;
-        margin-right: 10px;
-        white-space: nowrap;
-        border-radius: 7px;
-        display: inline-block;
-        padding: 7px;
-        color: white;
-        text-align: center;
-        font-family: Pretendard, sans-serif;
-        font-size: 15px;
-        font-weight: 600;
-        letter-spacing: -0.6px;
-    }
+}
+.tag {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: green;
+    margin-right: 10px;
+    white-space: nowrap;
+    border-radius: 7px;
+    display: inline-block;
+    padding: 7px;
+    color: white;
+    text-align: center;
+    font-family: Pretendard, sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: -0.6px;
 }
 
 .md_img{
@@ -75,10 +74,6 @@ body, html {
 
 .projects{
     text-align: center;
-
-    .projects_title{
-        
-    }
     .project_cards{
         list-style-type: none; /* 리스트 마커 제거 */
         padding: 5;
@@ -110,4 +105,10 @@ body, html {
             }
         }
     }
+}
+
+.foot{
+    display: inline-block;
+    height: 30px;
+    padding: 30px;
 }
