--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,17 @@
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <!doctype html>
 <html lang="ko">
+<link rel="icon" href="{% static 'favicon.png' %}">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <title>hanbyel's portfolio</title>
-    <a class = 'base_banner' style="background-image: url('base_banner.jpg');">
+    <a class = 'base_banner'>
         <div class = "base_text">
             <h3 class = 'base_title'>
-                움직이는 개발자, <b>임한별</b> 입니다.
+                움직이는 풀스택 개발자, <b>임한별</b> 입니다.
             </h3>
             <i class="fa-solid fa-square-phone"></i>
             <div class = "phone">
@@ -24,15 +25,14 @@
     </a>
 </head>
 <body>
-<!-- 기본 템플릿 안에 삽입될 내용 Start -->
-{% block content %}
-{% endblock %}
-<!-- 기본 템플릿 안에 삽입될 내용 End -->
-
-<div class = 'foot'>
-    <div>
-        Made with Django
+    <div class="base_contents">
+        {% block content %}
+        {% endblock %}
     </div>
-</div>
+    <div class = 'foot'>
+        <div>
+            Made with Django
+        </div>
+    </div>
 </body>
 </html>
