--- a/templates/main/Projects.html
+++ b/templates/main/Projects.html
@@ -1,25 +1,37 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+<script src="{% static 'js/projects.js' %}" type="text/javascript"></script>
 <section class="projects">
     <div class="projects_head">
         <div class="projects_title">
-            <h2>Project</h2>
+            <h1>Project</h1>
             <div>흥미를 가지고 진행했던 프로젝트들을 소개합니다</div>
         </div>
+    </div>
+    <div class="projects_slide">
+        <div class="projects_slide__prev slide-left">left</div>
+        {% for project in projects %}
+        <input type="radio" name="slide" id="slide{{ project.id }}" {% if project.id == 1 %}checked{% endif %}>
+        {% endfor %}
+        <div class="projects_slide__next slide-right">right</div>
     </div>
     <ul class="project_cards">
         {% for project in projects %}
         <li class="project_card">
-            <a href="/project/{{ project.id }}/">
-                <img class="project_card_img" src="{{ project.banner_img.url }}" width: 50%/>
-            </a>
-            <div class="project_card_text">
-                <hr>
-                <h3 class="project_card_contents_title">{{ project.title }}</h3>
-                <hr>
-                <ul class="tags">
-                    {% for tag in project.tags.all %}
-                    <li class="tag">{{ tag.tag }}</li>
-                    {% endfor %}
-                </ul>
+            <div>
+                <a href="/project/{{ project.id }}/">
+                    <img class="project_card_img" src="{{ project.banner_img.url }}" width: 50%/>
+                </a>
+                <div class="project_card_text">
+                    <hr>
+                    <h3 class="project_card_contents_title">{{ project.title }}</h3>
+                    <hr>
+                    <ul class="tags">
+                        {% for tag in project.tags.all %}
+                        <li class="tag">{{ tag.tag }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </li>
         {% endfor %}
