--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
     {% endblock %}
     <div class = 'foot'>
         <div>
-            Made with Django
+            Made with Django, AWS
         </div>
     </div>
 </body>
