--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,20 @@
 
 <!doctype html>
 <html lang="ko">
-
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Django로 작성한 포트폴리오 입니다.">
+    <meta name="author" content="Hanbyel">
+    <meta name="generator" content="Django">
+    <meta name="robots" content="noindex">
+    <meta property="og:title" content="Hanbyel's Portfolio">
+    <meta property="og:description" content="Django로 작성한 포트폴리오 입니다.">
+    <meta property="og:image" content="/media/ogimage.jpg">
     <link rel="icon" href="{% static 'favicon.png' %}">
-
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    
     <title>
         Hanbyel's Portfolio</title>
 </head>
