--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="noindex">
     <meta property="og:title" content="Hanbyel's Portfolio">
     <meta property="og:description" content="Django로 작성한 포트폴리오 입니다.">
-    <meta property="og:image" content="/media/ogimage.jpg">
+    <meta property="og:image" content="https://github.com/Adihang/md-img/assets/56463432/8fd18cc5-5052-4f93-832d-8a1e3b7bf982">
     <link rel="icon" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
