--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,10 @@
     <!-- 네비게이션바 -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'main:main' %}">Hanbyel's Portfolio</a>
+            <a class="navbar-brand" href="{% url 'main:main' %}">
+                <img class = "ogimage" src="/media/ogimage.jpg"/>
+                <b>Hanbyel's Portfolio</b>
+            </a>
             <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
