--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'main:main' %}">
-                <img class = "ogimage" src="/media/ogimage.jpg"/>
-                <b>Hanbyel's Portfolio</b>
+                Hanbyel's Portfolio
             </a>
             <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse"
