--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="icon" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
     <title>
         Hanbyel's Portfolio</title>
 </head>
