--- a/templates/main.html
+++ b/templates/main.html
@@ -6,11 +6,13 @@
             <h4 class = 'main_title'>
                 움직이는 백엔드 개발자, <b>임한별</b> 입니다.
             </h4>
-            <div class = "phone">
-                Phone: +82-10-7935-3599
-            </div>
-            <div class = "Email">
-                Email: limhan456@naver.com
+            <div class = 'contact'>
+                <div class = "phone">
+                    Phone: +82-10-7935-3599
+                </div>
+                <div class = "Email">
+                    Email: limhan456@naver.com
+                </div>
             </div>
         </div>
         <img class = "profile_img" src="/media/profile.jpg"/>
