--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,13 @@ margin-left: 10px;
 padding: 30px;
 padding-top: 50px;
 }
+
+.contact{
+    flex: 1;
+    margin-left: 5px;
+    color :#535353
+}
+
 .main_title{
     color: black;
     text-decoration: none;
@@ -52,6 +59,7 @@ body, html {
     padding-top: 40;
     text-align: center;
 }
+
 .project_detail_content{
     padding-left: 30px;
     padding-right: 30px;
@@ -104,6 +112,8 @@ section{
 .career_card_date{
     color: #535353;
     font-size: 14;
+    flex: 1;
+    margin-left: 5px;
 }
 .career_card_text{
     margin-top: 30;
@@ -123,29 +133,28 @@ section{
     text-align: center;
     align-items: center; /* 수직 가운데 정렬 */
     overflow-x: auto;
-
-    .project_card{
-        background-color: rgb(238, 238, 238);
-        margin-right: 10px;
-        display: inline-block;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 10px;
-        border-radius: 15px;
-        justify-content: center; /* 수평 가운데 정렬 */
-        align-items: center; /* 수직 가운데 정렬 */
-        .project_card_img{
-            width: 300px; /* 원하는 너비 설정 */
-            height: 300px;
-            object-fit: fill;
-            display: flex;
-            justify-content: center; /* 수평 가운데 정렬 */
-            align-items: center; /* 수직 가운데 정렬 */
-            border-radius: 15px;
-            display: inline-block;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-color: white;
-        }
-    }
+}
+.project_card{
+    background-color: rgb(238, 238, 238);
+    margin-right: 10px;
+    display: inline-block;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 15px;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+}
+.project_card_img{
+    width: 300px; /* 원하는 너비 설정 */
+    height: 300px;
+    object-fit: fill;
+    display: flex;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+    border-radius: 15px;
+    display: inline-block;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: white;
 }
 
 .foot{
