--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,18 @@ body {
 .ogimage{
     padding-right: 30;
 }
+.responsive-iframe {
+    position: relative;
+    width: 100%;
+    padding-bottom: 60%;
+}
+.responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 @media (min-width: 900px) {
     .main_contents{
         padding-left: 30px;
@@ -28,7 +40,6 @@ body {
         overflow: hidden;
     }
 }
-
 @media (max-width: 899px){
     .main_contents{
         padding-left: 10px;
@@ -83,14 +94,11 @@ textarea {
 input[type=submit] {
     margin-top:10px;
 }
-
-body, html {
-    height: 100%;
-    margin: 0;
-  }
+.project_detail{
+    margin-top: 30;
+}
 .project_detail_title {
-    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);;
-    padding-top: 40;
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
@@ -171,7 +179,7 @@ body, html {
     align-items: center; /* 수직 가운데 정렬 */
 }
 .project_card_img{
-    width: 300px; /* 원하는 너비 설정 */
+    width: 300px;
     height: 300px;
     object-fit: fill;
     display: flex;
