--- a/templates/main/Careers.html
+++ b/templates/main/Careers.html
@@ -6,7 +6,7 @@
             <h3><b>경력 사항</b></h3>
         </div>
     </div>
-    <ul class="career_cards">
+    <cards class="career_cards">
         {% for career in careers %}
         <hr>
         <li class="career_card">
@@ -23,5 +23,5 @@
             </div>
         </li>
         {% endfor %}
-    </ul>
+    </cards>
 </section>
