--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
     <div class = "main_contents">
         <hr>
         <div class = 'main_subtitle'>
-            <div>자신이 당장 하지 못하는 일이라고 손가락을 빨며 멀리서 지켜 보는 게 아니라 일단 발을 담궈 봅니다.</div>
+            <div>자신이 당장 하지 못하는 일이라고 손가락을 빨며 멀리서 지켜 보는 것이 아니라 일단 발을 담궈 봅니다.</div>
             <div>수동적으로 시키는 일만 하며 멈춰 있는 것이 아닌, 본인이 할 수 있는 일을 계속해서 만들어냅니다.</div>
         </div>
         <hr>
