--- a/templates/main/Projects.html
+++ b/templates/main/Projects.html
@@ -7,7 +7,7 @@
             <div>흥미를 가지고 진행했던 프로젝트들을 소개합니다</div>
         </div>
     </div>
-    <ul class="project_cards">
+    <cards class="project_cards">
         {% for project in projects %}
         <li class="project_card">
             <div>
@@ -27,5 +27,5 @@
             </div>
         </li>
         {% endfor %}
-    </ul>
+    </cards>
 </section>
