--- a/templates/main.html
+++ b/templates/main.html
@@ -24,11 +24,14 @@
             <div>수동적으로 시키는 일만 하며 멈춰 있는 것이 아닌, 본인이 할 수 있는 일을 계속해서 만들어냅니다.</div>
         </div>
         <hr>
-        <div class="animation fade-up">
+        <div class="main_careers">
             {% include "main/Careers.html" %}
         </div>
-        <div class="animation fade-up">
+        <div class="main_projects">
             {% include "main/Projects.html" %}
+        </div>
+        <div class="main_hobbys">
+            {% include "main/Hobbys.html" %}
         </div>
     </div>
 </div>
