--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,7 +166,7 @@ input[type=submit] {
 .projects{
     text-align: center;
 }
-.projects_head{
+.head{
     padding-top: 25px;
     padding-bottom: 25px;
 }
