--- a/templates/main/Projects.html
+++ b/templates/main/Projects.html
@@ -1,8 +1,6 @@
-{% load static %}
-<script src="{% static 'js/projact_card.js' %}" type="text/javascript"></script>
 <section class="projects">
-    <div class="projects_head">
-        <div class="projects_title">
+    <div class="head">
+        <div class="title">
             <h3><b>프로젝트</b></h3>
             <div>흥미를 가지고 진행했던 프로젝트들을 소개합니다</div>
         </div>
