--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
     <div class = 'main_banner'>
         <div class = "main_text">
             <h4 class = 'main_title'>
-                움직이는 백엔드 개발자, <b>임한별</b> 입니다.
+                움직이는 풀스텍 개발자, <b>임한별</b> 입니다.
             </h4>
             <div class = 'contact'>
                 <div class = "phone">
