--- a/static/css/stratagem_style.css
+++ b/static/css/stratagem_style.css
@@ -9,7 +9,7 @@
     width: 100vw; 
 }  
   
-.arrow {position: absolute;width: 40px;height: 40px;background-color: #ccc;border-radius: 50%;transform: translate(-50%, -50%);  
+.arrow {position: absolute;width: 40px;height: 40px;background-color: #ccc;border-radius: 50%;transform: translate(-50%, -50%);  opacity: 0.5;
 }  
   
 .arrow-top {top: 10%;left: 50%;  
@@ -26,6 +26,32 @@
   
 .content {margin-top: 0px;margin-left: 0px;  
 }  
-  
-p {font-size: 18px;line-height: 1.5;  
+.stratagem_page{
+    background-color: white;
+}
+.stratagem_cards {
+    margin-left: 0;
+    padding-left: 0;
+}
+.stratagem_card {
+    height: 40;
+    padding: 5;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 5px;
+}
+.stratagem_icon{
+    height: 40px;
+    width: 40px;
+    background-color: rgb(54, 54, 54);
+    margin-right: 5px;
+    border-radius: 10%;
+}
+.stratagem_name {
+    font-size: 20px;
+    margin-right: 5px;
 }  
+ul{
+    list-style-type: none;
+    list-style: none;
+    }
