--- a/templates/fun/Stratagem.html
+++ b/templates/fun/Stratagem.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/stratagem_style.css' %}">
+<script src="{% static 'js/stratagem.js' %}" type="text/javascript"></script>
 <div class="stratagem_page">
     <div class="stratagem">
         <div class="stratagem_content">
@@ -11,17 +12,15 @@
                 <div class="arrow arrow-left"></div>
                 <div class="arrow arrow-right"></div>
                 <div class="content">
+                <ul class="stratagem_cards">
                     {% for stratagem in stratagems %}
-                    <hr>
                     <li class="stratagem_card">
-                        <div class="stratagem_head">
-                            <h5 class="stratagem_name"><b>{{ stratagem.name }}</b></h5>
-                        </div>
-                        <div class="stratagem_card_commend">
-                            <div>{{ stratagem.commend|safe }}</div>
-                        </div>
+                        <img class="stratagem_icon" src="{{ stratagem.icon.url }}" alt="Stratagem Icon"/>
+                        <div class="stratagem_name">{{ stratagem.name }} </div>
+                        <div class="stratagem_command" data-command="{{ stratagem.command }}"></div>
                     </li>
                     {% endfor %}
+                </ul>
             </div>  
         </div>
     </div>
