--- a/templates/fun/Stratagem.html
+++ b/templates/fun/Stratagem.html
@@ -9,12 +9,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Helldivers Mini Game">
+    <meta name="description" content="Helldivers assets">
     <meta name="author" content="Hanbyel">
     <meta name="generator" content="Django">
     <meta name="robots" content="noindex">
-    <meta property="og:title" content="Stratagem Hero">
-    <meta property="og:description" content="Helldivers Mini Game">
+    <meta property="og:title" content="Stratagems">
+    <meta property="og:description" content="Helldivers assets">
     <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
     <link rel="icon" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
@@ -22,10 +22,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/stratagem_style.css' %}">
     <script src="{% static 'js/stratagem.js' %}" type="text/javascript"></script>
     <title>
-        Stratagem Hero</title>
+        Stratagems</title>
 </head>
 <body>
-    <h3>Stratagem Hero</h3>
+    <h3>Stratagem</h3>
     <hr>
     <div class="stratagem_page">
         <div class="stratagem">
