--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.thingiverse.com/hanbyel/designs">Thingiverse</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Stratagem/">Helldivers2</a>
+                    </li>
                 </ul>
             </div>
         </div>
