--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="https://www.thingiverse.com/hanbyel/designs">Thingiverse</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Stratagem/">Helldivers2</a>
+                        <a class="nav-link" href="/Stratagem/">Mini Game</a>
                     </li>
                 </ul>
             </div>
