--- a/templates/fun/Stratagem.html
+++ b/templates/fun/Stratagem.html
@@ -2,53 +2,57 @@
 
 <!doctype html>
 <html lang="ko">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Helldivers assets">
-    <meta name="author" content="Hanbyel">
-    <meta name="generator" content="Django">
-    <meta name="robots" content="noindex">
-    <meta property="og:title" content="Stratagems">
-    <meta property="og:description" content="Helldivers assets">
-    <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
-    <link rel="icon" href="{% static 'favicon.png' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/stratagem_style.css' %}">
-    <script src="{% static 'js/stratagem.js' %}" type="text/javascript"></script>
-    <title>
-        Stratagems</title>
-</head>
-<body>
-    <h3>Stratagem</h3>
-    <hr>
-    <div class="stratagem_page">
-        <div class="stratagem">
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Helldivers Mini Game">
+        <meta name="author" content="Hanbyel">
+        <meta name="generator" content="Django">
+        <meta name="robots" content="noindex">
+        <meta property="og:title" content="Stratagem Hero">
+        <meta property="og:description" content="Helldivers Mini Game">
+        <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/484730d2-3edb-47ee-b598-206096312261">
+        <link rel="icon" href="{% static 'favicon.png' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/stratagem_style.css' %}">
+        <script src="{% static 'js/stratagem.js' %}" type="text/javascript"></script>
+        <title>
+            Stratagem Hero</title>
+    </head>
+    <body>
+        <div class="stratagem_page">
+            <h3 class="title">Stratagem Hero</h3>
+            <hr class="stratagem_hr">
             <div class="stratagem_content">
+                <div class="stratagem_scoreboard">
+                    <h1 class="end_text">Score</h1>
+                    <h3 class="end_score">error</h3>
+                </div>
                 <div class="stratagem_container">
-                    <div class="arrow arrow-top"></div>
-                    <div class="arrow arrow-bottom"></div>
-                    <div class="arrow arrow-left"></div>
-                    <div class="arrow arrow-right"></div>
-                    <div class="content">
                     <ul class="stratagem_cards">
                         {% for stratagem in stratagems %}
                         <li class="stratagem_card">
-                            <img class="stratagem_icon" src="{{ stratagem.icon.url }}" alt="Stratagem Icon"/>
-                            <div class="stratagem_name">{{ stratagem.name }} </div>
+                            <div class="stratagem_card_title">
+                                <img class="stratagem_icon" src="{{ stratagem.icon.url }}" alt="Stratagem Icon"/>
+                                <div class="stratagem_name">{{ stratagem.name }} </div>
+                            </div>
                             <div class="stratagem_command" data-command="{{ stratagem.command }}"></div>
                         </li>
                         {% endfor %}
                     </ul>
+                    <div class="arrow arrow-top"></div>
+                    <div class="arrow arrow-bottom"></div>
+                    <div class="arrow arrow-left"></div>
+                    <div class="arrow arrow-right"></div>
                 </div>  
             </div>
+            <hr class="stratagem_hr">
         </div>
-        <hr>
-    </div>
-</body>
+        <div class="lowtext" >made by Adihang</div>
+    </body>
 </html>
