--- a/templates/fun/Stratagem_Hero.html
+++ b/templates/fun/Stratagem_Hero.html
@@ -26,7 +26,11 @@
     </head>
     <body>
         <div class="stratagem_page">
-            <h3 class="title">Stratagem Hero</h3>
+            <div class="title">
+                <img class="stratagem_icon" src="/media/icon/Helldivers-2-Icon-PNG.png" alt="Stratagem Icon"/>
+                <h3 class="title_text">Stratagem Hero</h3>
+                <img class="stratagem_icon" src="/media/icon/Helldivers-2-Icon-PNG.png" alt="Stratagem Icon"/>
+            </div>
             <hr class="stratagem_hr">
             <div class="stratagem_content">
                 <div class="stratagem_scoreboard">
