--- a/templates/fun/Stratagem_Hero.html
+++ b/templates/fun/Stratagem_Hero.html
@@ -33,6 +33,9 @@
             </div>
             <hr class="stratagem_hr">
             <div class="stratagem_content">
+                <h1 class="discription">
+                    조작 : 방향키<br>
+                </h1>
                 <div class="stratagem_scoreboard">
                     <h1 class="end_text">Score</h1>
                     <h3 class="end_score">error</h3>
