--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
         </div>
-        <!-- <img class = "profile_img" src="/media/profile.jpg"/> -->
+        <img class = "profile_img" src="/media/profile.jpg"/>
     </div>
     <div class = "main_contents">
         <hr>
