방향키 추가

--- a/templates/fun/Stratagem_Hero.html
+++ b/templates/fun/Stratagem_Hero.html
@@ -34,7 +34,7 @@
             <hr class="stratagem_hr">
             <div class="stratagem_content">
                 <h1 class="discription">
-                    조작 : 방향키<br>
+                    조작 : 방향키 or WASD<br>
                 </h1>
                 <div class="stratagem_scoreboard">
                     <h1 class="end_text">Score</h1>
