--- a/templates/fun/Salvations_Edge_4.html
+++ b/templates/fun/Salvations_Edge_4.html
@@ -22,12 +22,12 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/salvations_edge_style.css' %}">
         <script src="{% static 'js/salvations_edge_4.js' %}" type="text/javascript"></script>
         <title>
-            구원의 경계 4네임드</title>
+            구원의 경계 4네임드 계산기</title>
     </head>
     <body>
         <div class="Salvations_Edge_4">
             <div class="title">
-                <h3 class="title_text">구원의 경계 4네임드 계산기</h3>
+                <h3 class="title_text">능지박살 아이익들을 위한 싱글벙글 구원의 경계 4네임드 계산기</h3>
             </div>
             <hr>
             <div class="content">
