가변 이미지

--- a/templates/fun/Salvations_Edge_4.html
+++ b/templates/fun/Salvations_Edge_4.html
@@ -27,7 +27,8 @@
     <body>
         <div class="Salvations_Edge_4">
             <div class="title">
-                <img src="/media/Salvations_Edge_4_title_img.png" alt="title_img" class="title_img">
+                <img src="/media/Salvations_Edge_4_title_img.png" alt="title_img" class="title_img_big">
+                <img src="/media/Salvations_Edge_4_title_img_s.png" alt="title_img" class="title_img_small">
                 <h3 class="title_text">능지박살 아이익들을 위한 구경 4네임드 계산기</h3>
             </div>
             
