--- a/static/css/salvations_edge_style.css
+++ b/static/css/salvations_edge_style.css
@@ -22,16 +22,7 @@ ul{
     padding-left: 10px;
     padding-right: 10px;
 }
-.content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70vh;
-    position: relative;
-    color: white;
-    text-align: center;
-    flex-direction: column;
-}
+
 .main_title{
     color: white;
 }
@@ -67,7 +58,47 @@ hr{
 .description{
     display: none;
 }
-.title_img{
-    width: 100%; /* 이미지 너비를 페이지의 너비에 맞춤 */
-    height: auto; /* 이미지 비율을 유지하여 높이를 자동 조절 */
+@media (max-width: 899px) {
+    .title_img_big {
+        display: none; /* 기본 이미지를 숨김 */
+        width: 100%; /* 이미지 너비를 페이지의 너비에 맞춤 */
+        height: auto; /* 이미지 비율을 유지하여 높이를 자동 조절 */
+    }
+    .title_img_small {
+        display: block; /* 작은 화면용 이미지를 표시 */
+        width: 100%; /* 이미지 너비를 페이지의 너비에 맞춤 */
+        height: auto; /* 이미지 비율을 유지하여 높이를 자동 조절 */
+    }
+    .content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 40vh;
+        position: relative;
+        color: white;
+        text-align: center;
+        flex-direction: column;
+    }
+}
+@media (min-width: 900px) {
+    .title_img_big {
+        display: block;
+        width: 100%; /* 이미지 너비를 페이지의 너비에 맞춤 */
+        height: auto; /* 이미지 비율을 유지하여 높이를 자동 조절 */
+    }
+    .title_img_small {
+        display: none;
+        width: 100%; /* 이미지 너비를 페이지의 너비에 맞춤 */
+        height: auto; /* 이미지 비율을 유지하여 높이를 자동 조절 */
+    }
+    .content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 70vh;
+        position: relative;
+        color: white;
+        text-align: center;
+        flex-direction: column;
+    }
 }
