--- a/templates/main/Hobbys.html
+++ b/templates/main/Hobbys.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="hobby_card">
-        <a href="www.thingiverse.com/hanbyel/designs">
+        <a href="https://www.thingiverse.com/hanbyel/designs">
             <img class="hobby_card_img hover-dark" src="/media/hobbys_title_img.png">
         </a>
     </div>
