--- a/templates/main.html
+++ b/templates/main.html
@@ -34,5 +34,10 @@
             {% include "main/Hobbys.html" %}
         </div>
     </div>
+    <div class = 'foot'>
+        <div>
+            Made with Django, AWS
+        </div>
+    </div>
 </div>
 {% endblock %}
