--- a/templates/main.html
+++ b/templates/main.html
@@ -36,7 +36,7 @@
     </div>
     <div class = 'foot'>
         <div>
-            Made with Django, AWS
+            Made with Django, Ollama, Cloudflare Tunnel
         </div>
     </div>
 </div>
