대화 유지, 한글 필터 완화

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,6 @@
     {% block content %}
     {% endblock %}
     <!-- 채팅 위젯 -->
-    <script src="{% static 'js/chat_widget.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/chat_widget.js' %}?v=20260215_2306" type="text/javascript"></script>
 </body>
 </html>
