권한관련수정

--- a/templates/main/Careers.html
+++ b/templates/main/Careers.html
@@ -17,7 +17,7 @@
             </div>
             <div class="career_card_text">
                 <div><b>{{ career.position }}</b></div>
-                <div>{{ career.content|safe }}</div>
+                <div>{{ career.content }}</div>
             </div>
         </li>
         {% endfor %}
