--- a/templates/main/ProjectDetail.html
+++ b/templates/main/ProjectDetail.html
@@ -12,7 +12,7 @@
         </ul>
         <hr>
         <div class="project_detail_content">
-            {{ project.content|safe }}
+            {{ project.content }}
         </div>
     </div>
     <hr>
